Vince pointed out should be /2

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -2692,7 +2692,7 @@ Figure \ref{fig:Coalescent_simulation_3} for a random realization of this proces
 
 
 More generally when we sample $i$ alleles there are ${i \choose
- 2}$ pairs, i.e. $i(i-1)2$ pairs, thus the probability that no pair
+ 2}$ pairs, i.e. $i(i-1)/2$ pairs, thus the probability that no pair
 of alleles coalesces in the preceding generation is
 \begin{equation}
 \left(1-\frac{1}{(2N)} \right)^{{i \choose
