added code for varying pop size loss of het

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -2841,12 +2841,15 @@ segregating sites in a sample ($S$) equal to this expectation. We'll call this e
 this estimator was devised by Watterson, hence the $W$.
 
 
+\subsection{Comparing polymorphism and divergence}
+
+
 \subsection{Deviations from the constant population model.}
 We've seen previously that changes in our population size can be
 captured by an effective population size. However, this will only be a
 useful measure if population sizes vary rapidly enough, that the
 harmonic mean effective population size over short time periods ($\ll
-N_e$) is representative of the effective population size averaged over
+N_e$ generations) is representative of the effective population size averaged over
 longer time periods. If this is not the case there is no one effective
 population size, as we can not approximate our rate of drift by a
 single constant population. Furthermore, we've ignored the effect of
