fixed two minor typos in pdf notes

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -661,7 +661,7 @@ heterozygosity above). The probability that our alleles coalescence before eithe
 of them migrates off the island, irrespective of the time, is
 \begin{equation}
 \int_0^{\infty} \frac{1}{2N_I} \exp\left( -t\left (\frac{1}{2N_I} +
-    2m\right) \right) dt = \frac{1(2N_I) }{1/(2N_I) +
+    2m\right) \right) dt = \frac{1/(2N_I) }{1/(2N_I) +
     2m}.
 \end{equation}
 
@@ -671,7 +671,7 @@ island. Therefore, the only way that the alleles can be different from
 each other is if one or other of them migrates to the mainland, which
 happens with probability  
 \begin{equation}
-\frac{1/(2N_I) }{1/(2N_I) + 2m}
+1 - \frac{1/(2N_I) }{1/(2N_I) + 2m}
 \end{equation}
 Conditional on one or other of our alleles migrating to the mainland,
 both of our alleles represent independent draws from the mainland and
