fixed log_N back to log(2N)

--- a/popgen_notes.tex
+++ b/popgen_notes.tex
@@ -2971,7 +2971,7 @@ given by eqn. \eqref{eqn:pi_HH}, for two different selection coefficients.\\
 For our expected diversity levels to recover to $50\%$ of
 its neutral expectation $\E(\pi_r)/\theta=0.5$, requires a physical
 distance $\ell^{*}$ such that $\log(0.5) = -r_{BP} \ell ^*\tau$ as using our
-expression for $\tau$ then $ \ell^* = \frac{s}{r_{BP} \log_N 4}$. The width of our trough of reduced diversity depends on $s/r_{BP}$,
+expression for $\tau$ then $ \ell^* = \frac{s}{r_{BP} \log (2N) }$. The width of our trough of reduced diversity depends on $s/r_{BP}$,
 so  else being equal we expect stronger sweeps or sweeps in regions of low
 recombination to have a larger hitchhiking effect. So that a selection coefficient of $s=0.1\%$ would reduce
 diversity over 10's of kb, while a sweep of $s=1\%$ would affect
