better CSS, image support

--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -34,14 +34,14 @@ the time when gametes fuse.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.8 \textwidth]{figures/CEU_YRI_separately_HWE.eps}
+\includegraphics[width=0.8 \textwidth]{figures/CEU_YRI_separately_HWE.png}
 \end{center}
 \end{figure}
 
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.5 \textwidth]{figures/CEU_YRI_together_HWE.eps}
+\includegraphics[width=0.5 \textwidth]{figures/CEU_YRI_together_HWE.png}
 \end{center}
 \end{figure}
 
