--- a/chapter-04.tex
+++ b/chapter-04.tex
@@ -43,7 +43,7 @@ normally distributed (see Figure \ref{fig:QT1}).\\
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.8\textwidth]{figures/QT1.eps}
+\includegraphics[width=0.8\textwidth]{figures/QT1.png}
 \end{center}
 \caption{The convergence of the phenotypic distribution to a normal distribution.} \label{fig:QT1}
 \end{figure}
@@ -252,7 +252,7 @@ close to one then the parental mid-point is a good guess at the child's
 phenotype.\\
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.8\textwidth]{figures/QT2.eps}
+\includegraphics[width=0.8\textwidth]{figures/QT2.png}
 \end{center}
 \caption{Regression of parental mid-point phenotype on child's
   phenotype.}
@@ -421,7 +421,7 @@ the selection gradient $\beta$).\\
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.8\textwidth]{figures/QT3.eps}
+\includegraphics[width=0.8\textwidth]{figures/QT3.png}
 \end{center}
 \end{figure}
 
