--- a/chapter-05.tex
+++ b/chapter-05.tex
@@ -316,7 +316,7 @@ to close to fixation ($p_{\tau} =1-1/(2N)$). \sa{Note again the difference by a 
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.5\textwidth]{figures/simple_diploid_trajs.eps}
+\includegraphics[width=0.5\textwidth]{figures/simple_diploid_trajs.png}
 \end{center}
 \caption{The trajectory of the frequency of allele $A_1$, starting
   from $p_{0}=0.01$, for a selection coefficient $s=0.01$ and three
@@ -685,7 +685,7 @@ before selection and in doing so have ignored terms of the order of $\sigma s$.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.5\textwidth]{figures/equilib_cline.eps}
+\includegraphics[width=0.5\textwidth]{figures/equilib_cline.png}
 \end{center}
 \caption{An equilibrium cline in allele frequency. Our individuals
   dispersal an average distance of $\sigma=1$km per generation, and our
