--- a/chapter-07.tex
+++ b/chapter-07.tex
@@ -117,7 +117,7 @@ time of a pair of a pair of alleles is $2N$ generations\\
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=\textwidth]{figures/Coalescent.eps}
+\includegraphics[width=\textwidth]{figures/Coalescent.png}
 \end{center}
 \caption{A simple simulation of the coalescent process. The simulation
   consists of a diploid population of 10 individuals (20 alleles). In
@@ -204,7 +204,7 @@ Figure \ref{fig:Coalescent_simulation_3} for a random realization of this proces
 
 \begin{figure}
 \begin{center}
-  \includegraphics[width = \textwidth]{figures/Coalescent_3.eps}
+  \includegraphics[width = \textwidth]{figures/Coalescent_3.png}
 \end{center}
 \caption{A simple simulation of the coalescent process for three
   lineages. We track the ancestry of 
