--- a/chapter-08.tex
+++ b/chapter-08.tex
@@ -101,7 +101,7 @@ $\sim$100kb.   \\
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.5\textwidth]{figures/hitchhiking_reduction.eps}
+\includegraphics[width=0.5\textwidth]{figures/hitchhiking_reduction.png}
 \end{center}
 \caption{Reduction in diversity compared to its neutral expectation as
 a function of the distance away from a site where a selected allele
@@ -164,7 +164,7 @@ is
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.5\textwidth]{figures/Genomewide_HH.eps}
+\includegraphics[width=0.5\textwidth]{figures/Genomewide_HH.png}
 \end{center}
 \caption{The relationship between (sex-averaged) recombination rate and synonymous
   site pairwise diversity ($\pi$) in {\it Drosophila melanogaster}
