--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -1,3 +1,4 @@
+
 \section{Allele and genotype frequencies}
 
 \subsection{Allele frequencies}
@@ -29,21 +30,36 @@ as long at $p$ is the frequency of the $A_1$ allele in the population at
 the time when gametes fuse.
 
 
+%{\bf Q}\arabic{Question} \refstepcounter{Question} 
+
+\begin{question} 
+Suppose the following genotype frequencies were observed for at an esterase locus in a population of Drosophila (A denotes the “fast” allele and B denotes the “slow” allele): 
+\begin{center}
+\begin{tabular}{|ccc|}
+AA &	AB &	BB\\
+0.6 &	0.2 &	0.2\\
+\end{tabular}\,.
+\end{center}
+What genotype frequencies would you expect under Hardy-Weinberg expectations?
+\end{question}
+
 %%%ADD A comment about WF sampling here!
 %% Also add a question about Poisson offspring number.
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.8 \textwidth]{figures/CEU_YRI_separately_HWE.png}
+\includegraphics[width= \textwidth]{figures/CEU_YRI_separately_HWE.png}
 \end{center}
+\caption{Demonstrating Hardy-Weinberg proportions using 10,000 SNPs from the HapMap CEU European and YRI African populations. Within each of these populations I plot the allele frequency against the frequency of the 3 genotypes. Each SNP is represented by 3 different coloured points. The solid lines show the mean genotype frequency (calculated using a loess smoothing). The dashed line shows the predicted genotype frequency from Hardy Weinberg equilibrium. I find it really pretty that the analytical predictions work as well as they do. }
 \end{figure}
 
 
-\begin{figure}
-\begin{center}
-\includegraphics[width=0.5 \textwidth]{figures/CEU_YRI_together_HWE.png}
-\end{center}
-\end{figure}
+%\begin{figure}
+%\begin{center}
+%\includegraphics[width=0.5 \textwidth]{figures/CEU_YRI_together_HWE.png}
+%\end{center}
+%\caption{}
+%\end{figure}
 
 
 %figure/QT1.eps
@@ -88,6 +104,15 @@ the pair of individuals share (above that expected from randomly
 sampling individuals from the population). } \label{table:IBDprobs}
 \end{table}
 
+%{\bf Q}\arabic{Question} \refstepcounter{Question} 
+\begin{question} 
+Consider a biallelic locus where allele 1 is
+at frequency $p$, and two individuals who have IBD allele sharing
+probabilities $r_0$, $r_1$, $r_2$. \\
+ {\bf A)} What is the probability that these
+two individuals are both homozygous for allele 1?\\
+{\bf} What is the probability that both individuals heterozygotes? 
+\end{question}
 \subsection{Inbreeding}
 We can define an inbred individual as an individual whose parents are
 more closely related to each other than two random individuals drawn
@@ -165,6 +190,12 @@ and the heterozygosity expected in the absence of inbreeding, $H_E=2pq$, as
 Hence, $F$ quantifies the deviation due to inbreeding of the observed heterozygosity from the one expected under random mating, relative to the latter.
 If we have multiple loci, we can replace $H_O$ and $H_E$ by their means
 over loci, $\bar{H}_O$ and $\bar{H}_E$, respectively. Note that, in principle, we could also calculate $F$ for each individual locus first, and then take the average across loci. However, this procedure is more prone to introducing a bias if sample sizes vary across loci, which is not unlikely when we are dealing with real data.\\
+
+%{\bf Q}\arabic{Question} \refstepcounter{Question} 
+\begin{question} 
+For the genotype frequencies observed at the esterase locus given
+above estimate the inbreeding coefficient (F). 
+\end{question}
 
 %==Phenotypic resemblance between relatives ==
 %<source-file filename="Quantative_traits.tex" display="Quantative_traits.wrapped.latexml.xhtml">
@@ -268,5 +299,305 @@ write
 which shows that $\fst$ is the proportion of the variance explained by the
 subpopulation labels.
 
+\subsection{Other approaches to population structure}
+There is a broad spectrum of methods to describe patterns of
+population structure in populaion genetic datasets. We'll briefly
+discuss two broad-classes of methods, assigment methods and principal
+components analysis,that appear often in the literature.
+
+\subsubsection{Assignment Methods}
+
+Here we'll describe a simple probabilistic assignment to find the
+probability that an individual of unknown population comes from one of
+$K$ predefined populations. We'll then briefly explain how to extend this
+to cluster individuals into $K$ initially unknown populations. This
+method is a simplified version of what Bayesian population genetics
+clustering algorithms such as STRUCTURE and ADMIXTURE do (Pritchard et al. Genetics 2000). 
+
+\paragraph{A simple assignment method}
+
+We have genotype data from unlinked S bi-allelic loci for $K$ populations. The allele frequency of allele $A_1$ at locus $l$ in population $k$ is denoted by $p_{k,l}$, so that the allele frequencies in population 1 are $p_{1,1},\cdots p_{1,L}$ and population 2 are $p_{2,1},\cdots p_{2,L}$ and so on. 
+
+You type a new individual from an unknown population at these $L$ loci. This individual's genotype at locus $l$ is $g_l$, where $g_l$ denotes the number of copies of allele $A_1$ this individual carries at this locus ($g_l=0,1,2$). 
+
+The probability of this individual's genotype at locus $l$ conditional on coming from population $k$ (i.e. their alleles being a random HW draw from population $k$) is 
+\begin{equation}
+P(g_l | \textrm{pop k}) = I(g_l=0) (1-p_{k,l})^2 +  I(g_l=1) 2 p_{k,l} (1-p_{k,l}) + I(g_l=2) p_{k,l}^2
+\end{equation}
+where $I(g_l=0)$ is an indicator function which is $1$ if $g_l=0$ and
+zero otherwise, and likewise for the other indicator functions. This
+follows simply from HWE.
+
+Assuming that the loci are independent, the probability of individual's genotypes conditional on them coming from population $k$ is 
+\begin{equation}
+P(\textrm{ind.} | \textrm{pop k})  = \prod_{l=1}^S P(g_l | \textrm{pop k}) \label{eqn_assignment}
+\end{equation}
+
+We wish to know the probability that this new individual comes from population $k$, i.e. $P(\textrm{pop k} | \textrm{new ind.})$. We can obtain this through Bayes rule 
+\begin{equation}
+ P(\textrm{pop k} | \textrm{ind.})  = \frac{P(\textrm{ind.} | \textrm{pop k}) P(\textrm{pop k})}{P(\textrm{ind.})}
+\end{equation}
+where 
+\begin{equation}
+P(\textrm{ind.}) = \sum_{k=1}^K  P(\textrm{ind.} | \textrm{pop k}) P(\textrm{pop k})
+\end{equation}
+is the normalizing constant. We interpret $P(\textrm{pop k})$ as the
+prior probability of the individual coming from population $k$, unless
+we have some other prior knowledge we will assume that the new individual has a equal probability of coming from each population $P(\textrm{pop k})=1/K$.  
+
+We intepret 
+\begin{equation}
+ P(\textrm{pop k} | \textrm{ind.})
+\end{equation}
+as the posterior probability that our new individual comes from each of our $1,\cdots, K$ populations.
+
+More sophisticated versions of this are now used to allow for hybrids,
+e.g, we can have a proportion $q_k$ of our individual's genome come
+from population $k$ and estimate the set of $q_k$'s.
+
+%{\bf Q}\arabic{Question} \refstepcounter{Question}  
+\begin{question} 
+We have two populations where the frequency of allele
+$A_1$ at two SNPs ($A_1/A_2$)  is given by
+\begin{center}
+\begin{tabular}{|ccc|}
+\hline
+Population & locus 1 & locus 2 \\
+\hline
+A & $0.1$ & $0.85$ \\
+B  & $0.95$ & $0.2$ \\
+\hline
+\end{tabular}
+\end{center}
+We sample an individual whose genotype is $A_1A_1$ at the first locus
+and $A_2A_2$ at the second. What
+is the probability that our indvidual comes from population 1 vs
+population 2?
+Lets assume that with probability $q_1$ our individual draws an allele
+from population $1$ and that with probability $q_2=1-q_1$ they draw an allele from
+population $2$. What is the probability of our individual's genotype
+given $q_1$? You could plot this probability as a function of $q_1$. How does 
+your plot change if our individual is heterozygote at both loci?
+\end{question} 
+
+\paragraph{Clustering based on assignment methods}
+While it is great to be able to assign our individuals to particular
+population, these ideas can be pushed to learn about how best to
+describe our genotype data in terms of discrete populations without
+assigning any of our individuals to populations {\it a priori}. 
+We wish to cluster our individuals into $K$ unknown populations. We begin by assigning our individuals at random to these $K$ populations. 
+\begin{itemize}
+\item Given these assignments we estimate the allele frequencies at all of our loci in each population. 
+\item Given these allele frequencies we chose to reassign each individual to a population $k$ with a probability given by eqn. ($\ref{eqn_assignment}$).
+\end{itemize}
+We iterate steps 1 and 2 for many iterations. If the data is sufficiently informative the assignments and allele frequencies will quickly converge. 
+
+To do this in a full bayesian scheme we need to place priors on the
+allele frequencies (e.g. a beta distribution).Technically we are using
+this is the joint posterior of our allele frequencies and assignments. 
+
+\subsubsection{Principal components analysis}
+The use of principal component analysis in population genetics was
+pioneered by Cavalli-Sforza. With large genotyping datasets PCA has made
+a come back. See Patterson et al 2006, PLoS Genetics and McVean,
+G. 2010 PLoS Genetics and for recent discussion.
+ 
+Consider a dataset consisting of N individuals at S bi-allelic
+SNPs. The $i^{th}$ individual's genotype data at locus $\ell$ takes
+value $g_{i,\ell}$=0,1, or 2 (corresponding to the number of copies of
+allele $A_1$ an individual carrys at this SNP). We can think of this
+as a N x S matrix (where usually $N \ll S$). 
+
+ Denoting the sample mean allele freq at SNP $\ell$ by $p_{\ell}$ we usually standardize the genotype in the following way
+\begin{equation}
+\frac{g_{i,\ell} - 2 p_{\ell}}{\sqrt{p_{\ell}(1-p_{\ell})}}
+\end{equation}
+i.e. at each SNP we center the genotypes by minusing of the mean
+genotype ($2\epsilon_{\ell}$) and divide through by the expected
+variance assuming that alleles are sampled binomially from the mean
+frequency ($\sqrt{p_{\ell} (1-p_{\ell})}$). Doing this to
+all of our genotypes we form a data matrix (of dimension N x S). We
+can then perform principal components analysis of this data matrix to
+cover the major axes of genotype variance in our sample.
+
+It is worth taking a moment to delve further into what we are doing
+here. There's a number of equivalent ways to thinking about what PCA
+is doing, one of these is to think that when we do PCA we are building the individual by individual
+covariance matrix and performing eigen-value decomposition of this
+matrix (with the eigen-vectors giving the PC).  This individual by individual covariance matrix has entries
+the $(i,~j)^{th}$ entry given by
+\begin{equation}
+\sum_{\ell=1}^S \frac{(g_{i,\ell} - 2p_{\ell})(g_{j,\ell} - 2p_{\ell})}{p_{\ell}(1-p_{\ell})}
+\end{equation}
+note that this is the covariance, is very similar to those we
+encountered in discussing $F$-statistics as correlations (equation
+\eqref{eqn:Fascorr}), expect now we are asking about the allelic covariance
+between two individuals above that expected if they were both drawn
+from the total sample at random (rather than the covariance of alleles
+within a single individual). So by performing PCA on the data we are
+learning about the major (orthogonal) axes of the kinship matrix.    
+
 
 \newpage
+\subsection{Correlations between loci, linkage disequilibrium, and recombination}
+
+%</source-file>
+
+Up to now we have been interested in correlations between alleles at the
+same locus, e.g. correlations within individuals (inbreeding) or between
+individuals (relatedness). We have seen how relatedness between parents affects the extent to which their offspring is inbred. We now turn to 
+correlations between alleles at different loci. To understand
+correlations between loci we need to understand recombination.\\
+
+
+\paragraph{Recombination}  Lets
+consider an individual heterozygous for a $AB$ and $ab$
+haplotype. If no recombination occurs between our two loci in this
+individual, then these two haplotypes will be transmitted intact to
+the next generation. While if a recombination (or more generally an
+odd number of recombinations) occurs between our two loci on the
+haplotype transmitted to the child then $\tfrac{1}{2}$ the time the
+child receives a $Ab$ haplotype and $\tfrac{1}{2}$ the time the child
+receives a $aB$ haplotype. So recombination is breaking up the
+association between loci. We'll define the recombination fraction ($r$) to be
+the probability of an odd number of recombinations between our loci.
+In practice we'll often be interested in relatively short regions
+where recombination is relatively rare, and so we might think that
+$r=r_{BP}L \ll 1$, where $r_{BP}$ is the average recombination rate
+per base pair (typically $\sim 10^{-8}$) and L is the number of base
+pairs separating our two loci.\\
+
+
+
+\paragraph{Linkage disequilibrium}
+The (horrible) phrase linkage
+disequilibrium (LD) refers to the statistical non-independence
+(i.e. a correlation)  of
+alleles at different loci. Our two loci, which segregate alleles $A/a$ and $B/b$, have allele
+frequencies of $p_A$ and $p_B$ respectively. The frequency of the two locus haplotype is $p_{AB}$,
+and likewise for our other three combinations. If our loci were
+statistically independent then $p_{AB} = p_Ap_B$, otherwise $p_{AB} \neq p_Ap_B$
+We can define a covariance between the $A$ and $B$ alleles at our two loci as
+\begin{equation}
+D_{AB} = p_{AB} - p_Ap_B
+\end{equation}
+and likewise for our other combinations at our two loci
+($D_{Ab},~D_{aB},~D_{ab}$). These $D$ statistics are all closely
+related to each other as $D_{AB} = - D_{Ab}$ and so on. Thus we only
+need to specify one $D_{AB}$ to know them all, so we'll drop the
+subscript and just refer to $D$. Also a handy result is that we can rewrite our haplotype
+frequency $p_{AB}$ as
+\begin{equation}
+p_{AB} = p_Ap_B+D. \label{eqn:ABviaD}
+\end{equation}
+If $D=0$ we'll say the two loci are in linkage equilibrium, while if
+$D>0$ or $D<0$ we'll say that the loci are in linkage
+disequilibrium (we'll perhaps want to test whether $D$ is
+statistically different from $0$ before making this choice). You should be careful to keep the concepts of linkage
+and linkage disequilibrium separate in your mind. Genetic linkage refers to the
+linkage of multiple loci due to the fact that they
+are transmitted through meiosis together (most often because the
+loci are on the same chromosome). Linkage disequilibrium merely refers
+to the correlation between the alleles at different loci, this may in
+part be due to the genetic linkage of these loci but does not
+necessarily imply this (e.g. genetically unlinked loci can be in LD
+due to population structure). \\
+
+Another common statistic for summarizing LD is $r^2$ which we write as
+\begin{equation}
+r^2 = \frac{D^2}{p_A(1-p_A) p_B(1-p_B) }
+\end{equation}
+as $D$ is a covariance, and $p_A(1-p_A) $ is the variance of an allele
+drawn at random from locus $A$, $r^2$ is the squared correlation
+coefficient.    \\
+
+%{\bf Q}\arabic{Question} \refstepcounter{Question}  
+\begin{question} 
+You genotype 2 bi-allelic loci (A \& B) segregating in two mouse subspecies (1 \& 2) which mate randomly among themselves, but have not historically interbreed since they speciated. On the basis of previous work you estimate that the two loci are separated by a recombination fraction of 0.1. The frequencies of haplotypes in each population are:
+\begin{center}
+\begin{tabular}{|c|cccc|}
+\hline
+Pop    & $p_{AB}$    & $p_{Ab}$ &    $p_{aB}$ &    $p_{ab}$\\
+\hline
+1 &    .02    & .18 &     .08 &    .72\\
+2&    .72 &    .18 &    .08 &    .02\\
+\hline
+\end{tabular}
+\end{center}
+
+{\bf A)} How much LD is there within populations, i.e. estimate D?\\
+
+{\bf B)} If we mixed the two populations together in equal proportions what value would D take before any mating has had the chance to occur? \\
+\end{question}
+
+
+\paragraph{The decay of LD due to recombination}
+We will now examine what happens to LD over the generations if we
+only allow recombination to occur in a very large population (i.e. no
+genetic drift, i.e. the frequencies of our loci follow their expectations). To do so consider the frequency of our $AB$ haplotype in the next generation
+$p_{AB}^{\prime}$. We lose a fraction $r$ of our $AB$ haplotypes to
+recombination ripping our alleles apart but gain a fraction $rp_A p_B$ per generation from other
+haplotypes recombining together to form $AB$ haplotypes. Thus in the
+next generation
+\begin{equation}
+p_{AB}^{\prime} = (1-r)p_{AB} + rp_Ap_B
+\end{equation}
+this last term here is $r(p_{AB}+p_{Ab})(p_{AB}+p_{aB})$, which
+multiplying this out is the
+probability of recombination in the different diploid genotypes that
+could generate a $p_{AB}$ haplotype. \\
+
+We can then write the change in the frequency of the $p_{AB}$
+haplotype as
+\begin{equation}
+\Delta p_{AB} = p_{AB}^{\prime} -p_{AB} = -r p_{AB} + rp_Ap_B = - r D
+\end{equation}
+so recombination will cause a decrease in the frequency of $p_{AB}$ if
+there is an excess of $AB$ haplotypes within the population ($D>0$), and an
+increase if there is a deficit of $AB$ haplotypes within the
+population ($D<0$). Our LD in the next generation is $D^{\prime} =
+p_{AB}^{\prime}$, so we can rewrite the above eqn. in terms of the
+$D^{\prime} $
+\begin{equation}
+D^{\prime}= (1-r) D
+\end{equation}
+so if the level of LD in generation $0$ is $D_0$ the level $t$
+generations later ($D_t$) is
+\begin{equation}
+D_t=  (1-r)^t D_0
+\end{equation}
+so recombination is acting to decrease LD, and it does so
+geometrically at a rate given by $(1-r)$. If $r \ll 1$ then we can
+approximate this by an exponential and say that   
+\begin{equation}
+D_t \approx  D_0 e^{-rt}
+\end{equation}\\
+
+
+
+%{\bf Q}\arabic{Question} \refstepcounter{Question}  
+\begin{question} 
+You find a hybrid population between the two mouse subspecies
+described in the question above, which appears to be comprised of equal proportions of ancestry from the two subspecies.  You estimate LD between the two markers to be 0.0723. Assuming that this hybrid population is large and was formed by a single mixture event, can you estimate how long ago this population formed? \\
+\end{question}
+%\subsection{Testing for departures from HWE.}
+%Note the form of $\hat{F}$ \eqref{eqn:FhatHO} is the same as the $X^2$
+%statistic, and so we can test for a deviation from hardy-weinberg  $X^2$
+
+
+%\subsection{Population structure}
+%The question naturally arises at this point: what reference population
+%(i.e. what allele frequency) do we use to calculate $\hat{F}$? If we are %calculating the inbreeding coefficient
+%of an English person do we use the frequencies of the town of that
+%person, of England, of the United Kingdom, or of the World?
+
+
+
+%\gc{Include the HapMap exercise here?}
+
+
+%==One locus models of selection==
+%<source-file filename="one_loc_sel_models.tex" display="one_loc_sel_models.wrapped.latexml.xhtml">
+
+\newpage
+
