--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -40,7 +40,7 @@ AA &	AB &	BB\\
 0.6 &	0.2 &	0.2\\
 \end{tabular}\,.
 \end{center}
-What genotype frequencies would you expect under Hardy-Weinberg expectations?
+What genotype frequencies would you expect under Hardy Weinberg expectations?
 \end{question}
 
 %%%ADD A comment about WF sampling here!
